// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`giving specifioc props to button 1`] = `
<button
  className="btn large primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  This is button
</button>
`;

exports[`renders without crashing 1`] = `
<button
  className="btn medium primary"
  disabled={false}
  onClick={[Function]}
  type="button"
/>
`;
